force-app/main/default/objects/Group_Region_SRD_Assignment__mdt/Group_Region_SRD_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Allows mapping SRD&apos;s and other personnel to their respective regions.  This can be useful in workflow and automation.</description>
    <label>Group/Region Assignment</label>
    <pluralLabel>Group/Region SRD Assignments</pluralLabel>
</CustomObject>