force-app/main/default/objects/Group_Region_SRD_Assignment__mdt/fields/Gift_Planning_Usre_ID__c.field-meta.xml
<CustomField>
    <fullName>Gift_Planning_Usre_ID__c</fullName>
    <description>User ID of Gift Planning staff assigned to a region.</description>
    <inlineHelpText>User ID of Gift Planning staff assigned to a region.</inlineHelpText>
    <label>Gift Planning User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>