force-app/main/default/objects/Group_Region_SRD_Assignment__mdt/fields/Group_Region__c.field-meta.xml
<CustomField>
    <fullName>Group_Region__c</fullName>
    <description>Group Region Global Value Set</description>
    <inlineHelpText>Group Region Global Value Set</inlineHelpText>
    <label>Group/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>East</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Midwest</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>West</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>South</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Principal Gift</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Gift Planning</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Programs</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Corporate Relations</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>University Relations Exec.</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Annual Giving</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Athletics</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Global Advancement</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Academic Advancement</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Foundation Relations</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Corporate/Foundation Relations</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Central</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>East Coast</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Illinois</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Northwest</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>NY Metro</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Southern</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Southwest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>