force-app/main/default/objects/Group_Region_SRD_Assignment__mdt/fields/Prospect_Mgmt_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Mgmt_User_ID__c</fullName>
    <label>Prospect Mgmt. User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>