force-app/main/default/objects/Group_Region_SRD_Assignment__mdt/fields/SRD_User_ID__c.field-meta.xml
<CustomField>
    <fullName>SRD_User_ID__c</fullName>
    <description>User ID for the SRD assigned to the region.</description>
    <inlineHelpText>User ID for the SRD assigned to the region.</inlineHelpText>
    <label>SRD User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>