force-app/main/default/objects/Group_Region_SRD_Assignment__mdt/fields/Stewardship_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Stewardship_User_ID__c</fullName>
    <description>User ID of Stewardship staff assigned to a region.</description>
    <inlineHelpText>User ID of Stewardship staff assigned to a region.</inlineHelpText>
    <label>Stewardship User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>